--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -13,3 +13,255 @@ body{
 .el-input-number--small{
     width: 100% !important;
 }
+
+
+
+/**
+自己的scss
+*/
+
+//菜单栏位按钮样式
+.bip-row.menubar{
+    margin-bottom: 10px !important;
+}
+//单据查询弹出框样式
+
+.line {
+    text-align: center;
+}
+.bip-search{
+    .el-dialog__header{
+        background-color: #20a0ff
+    }
+    .el-dialog__body{
+        padding: 10px 10px !important;
+    }
+}
+
+//查询框按钮
+.el-input-group__append{
+    padding: 0 8px !important;
+}
+
+/**普通输入框*/
+.is-required .el-form-item__label{
+    color:rgba(184, 29, 29, 0.8) !important ;   
+}
+
+.el-form-item__label{
+    font-weight:bold;  
+}
+
+/**拷贝定义*/
+.bip-copy {
+    .el-dialog__body{
+        padding:4px 12px;
+    }
+    .el-dialog__footer{
+        padding-top: 5px;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+    hr{
+        color:#ccc;
+    }
+    .el-table__body tr.current-row > td {
+        background-color: #13a8a1 !important;
+    }
+}
+
+/**Query查询*/
+.bip-query {
+    .el-dialog__header{
+        background-color: $--color-primary !important;
+        .el-icon-close{
+            color: black;
+        }
+    }
+    .el-dialog__body{
+        padding:4px 12px;
+    }
+    .el-dialog__footer{
+        padding-top: 5px;
+        padding-bottom: 10px;
+        text-align: center;
+    }
+    hr{
+        color:#ccc;
+    }
+    .el-table__body tr.current-row > td {
+        background-color: #13a8a1 !important;
+    }
+}
+
+/**辅助弹出框*/
+.bipinsaid {
+    .el-dialog__header{
+        background-color: $--color-primary !important;
+        .el-icon-close{
+            color: black;
+        }
+    }
+    .el-dialog__body{
+        padding:2px 2px;
+        
+    }
+    .el-dialog__footer{
+        padding-top: 5px;
+        padding-bottom: 10px;
+    }
+    hr{
+        color:#ccc;
+    }
+    .el-table__body tr.current-row > td {
+        background-color: #13a8a1 !important;
+    }
+}
+
+/**文件样式*/
+.bip-file {
+    .el-dialog__header{
+        background-color: $--color-primary !important;
+        .el-icon-close{
+            color: black;
+        }
+    }
+    .el-dialog__body {
+      padding: 2px 2px;
+    }
+    .el-dialog__footer {
+      padding-top: 5px;
+      padding-bottom: 10px;
+    }
+    hr {
+      color: #ccc;
+    }
+  }
+
+
+/** 菜单样式*/
+.sidebar-container {
+    transition: width 0.28s;
+    width: 280px;
+    height: 92%;
+    position: fixed;
+    font-size: 0px;
+    top: 60px;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    overflow: hidden;
+    .horizontal-collapse-transition {
+      transition: 0s width ease-in-out, 0s padding-left ease-in-out,
+        0s padding-right ease-in-out;
+    }
+    .el-scrollbar {
+      height: 100%;
+    }
+    .scrollbar-wrapper {
+      overflow-x: hidden !important;
+      .el-scrollbar__view {
+        height: 100%;
+      }
+    }
+    .el-scrollbar__bar.is-vertical {
+      right: 0px;
+    }
+    .is-horizontal {
+      display: none;
+    }
+    a {
+      display: inline-block;
+      width: 100%;
+      overflow: hidden;
+    }
+    .el-menu {
+      border: none;
+      height: 100%;
+      width: 100% !important;
+    }
+    .is-active > .el-submenu__title {
+      color: #111111 !important;
+    }
+}
+
+/** 统计图表样式*/
+
+.titlebg {
+    background-color: #f2f2f2;
+    text-align: center;
+    line-height: 30px;
+    margin-bottom: -20px;
+}
+.showchart {
+    border: 1px solid #E4E7ED;
+}
+.charttitle {
+    text-align: center;
+}
+.bi-chart{
+    height: 600px;
+}
+
+
+ 
+.bip-search{
+    .el-dialog__header{
+        background-color: #ffffff !important;
+        // 20a0ff
+    }
+}
+.bip-form-item {
+  margin-bottom: 22px !important;
+}
+
+
+/**审批样式*/
+.bip-work{
+
+    .el-dialog--center .el-dialog__body {
+        text-align: initial;
+        padding-top: 26px;
+        padding-right: 20px;
+        padding-bottom: 0px;
+        padding-left: 20px;
+        }
+    .el-dialog__header {
+        background-color: rgb(32, 160, 255);
+        padding-top: 8px;
+        .el-dialog__title{
+            color: #ffffff;
+            font-weight:bold;
+        }
+    }
+    .el-dialog__headerbtn {
+        position: absolute;
+        top: 10px;
+        font-size: 20px;
+    }
+
+    .bip-work-title{
+        margin-top: -18px;
+        h3{
+            font-size: 14px;
+            margin-top: 26px;
+        }
+    }
+    .bip-work-title.el-row{
+            margin-bottom: 0px;
+    }
+
+    .el-dialog__footer{
+        text-align: center
+    }
+
+    .el-dialog__body {
+        padding: 15px 20px 5px;
+        color: #606266;
+        font-size: 14px;
+        word-break: break-all;
+    }
+}
+
+
+/**自己的scss*/
