--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -4,6 +4,10 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
+@import 'vxe-table/styles/variable.scss';
+$vxe-table-row-current-background-color: #61b3d3cc !important; 
+@import 'vxe-table/styles/default.scss';
+
 body{
     overflow: scroll;
     overflow-y: hidden; 
