--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -97,15 +97,26 @@ body{
     width: 100% !important;
 }
 
-
+$--bip-input-color-label: #303439;
+$--bip-input-color-input: #606972;
+$--bip-input-color-req: #d62121;
+$--bip-input-color-dis: #bbbbbb;
+$--bip-bg-color:#f9f9f9;//f4f6fb
+$--bip-comm-color:#ffffff;//f4f6fb
 
 /**
 自己的scss
 */
 
 //菜单栏位按钮样式
-.bip-row.menubar{
-    margin-bottom: 10px !important;
+.menubar{
+    // margin-bottom: 10px !important;
+    background: $--bip-bg-color;
+    // height: 60px;
+    // margin-bottom: 20px;
+}
+.el-button-group > .el-button{
+    background: $--bip-bg-color;
 }
 //单据查询弹出框样式
 
@@ -126,14 +137,25 @@ body{
     padding: 0 8px !important;
 }
 
+
+
 /**普通输入框*/
 .is-required .el-form-item__label{
-    color:rgba(184, 29, 29, 0.8) !important ;   
+    color:$--bip-input-color-req;   
 }
 
-// .el-form-item__label{
-//     // font-weight:bold;  
-// }
+.el-form-item__label{
+    color:$--bip-input-color-label;
+    // font-weight:bold;  
+}
+
+.el-input .el-input__inner {
+    color:$--bip-input-color-input;
+}
+
+.el-input.is-disabled .el-input__inner {
+    color:$--bip-input-color-dis;
+}
 
 /**拷贝定义*/
 .bip-copy {
@@ -347,8 +369,7 @@ body{
 
 
 /**自己的scss*/
-$--bip-bg-color:#f9f9f9;//f4f6fb
-$--bip-comm-color:#ffffff;//f4f6fb
+
 .bip-main {
     // padding-left: 10px;
     padding-top: 0px !important;
@@ -372,6 +393,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
     position: relative;
     margin: 0 0 5px;
     background: $--bip-comm-color;
+}
+.el-tabs--border-card > .el-tabs__content {
+    padding: 5px 15px;
 }
 .el-tabs__content{
     background:$--bip-bg-color
