自定义桌面

--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -303,9 +303,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
 .charttitle {
     text-align: center;
 }
-.bi-chart{
-    height: 600px;
-}
+// .bi-chart{
+//     height: 600px;
+// }
 
 
  
