统计图表字体修改

--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -300,6 +300,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 .charttitle-left {
     text-align: left;
     padding-left: 10px;
+    font-size: 14px;
 }
 .charttitle-right {
     text-align: right;
