--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -180,7 +180,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
     .el-dialog__header{
         background-color: $--color-primary !important;
         .el-icon-close{
-            color: black;
+            color: #ffffff;
         }
         .el-dialog__title{
             color: #ffffff;
@@ -208,7 +208,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
     .el-dialog__header{
         background-color: $--color-primary !important;
         .el-icon-close{
-            color: black;
+            color: #ffffff;
         }
         .el-dialog__title{
             color: #ffffff;
@@ -233,7 +233,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
     .el-dialog__header{
         background-color: $--color-primary !important;
         .el-icon-close{
-            color: black;
+            color: #ffffff;
         }
         .el-dialog__title{
             color: #ffffff;
@@ -265,7 +265,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
     .el-dialog__header{
         background-color: $--color-primary !important;
         .el-icon-close{
-            color: black;
+            color: #ffffff;
         }
     }
     .el-dialog__body {
@@ -327,54 +327,39 @@ $--bip-comm-color:#ffffff;//f4f6fb
     }
 }
 
-/** 统计图表样式*/
-
-.titlebg {
-    // background-color: #f9f9f9;
-    text-align: center;
-    line-height: 30px;
+/** 统计图表样式*/
+.titlebg {
+    text-align: center;
+    line-height: 40px;
+    color: #4A77FA;
 }
-.charttitle-left {
-    text-align: left;
-    padding-left: 10px;
-    font-size: 14px;
+.charttitle-left {
+    text-align: left;
+    padding-left: 10px;
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-weight: 600;
 }
-.charttitle-right {
-    text-align: right;
-    padding-right: 10px;
-    cursor: pointer;
+.charttitle-right {
+    text-align: right;
+    padding-right: 10px;
+    cursor: pointer;
+    font-size: 10px;
 }
-.charttitle-right span {
-    font-size: 10px;
-    padding-left: 5px;
+.charttitle-right span {
+    font-size: 10px;
+    padding-left: 5px;
 }
-.showchart {
-    border: 1px solid #E4E7ED;
-}
-.charttitle {
+.charttitle{
     text-align: center;
     background-color: #ffffff;
-    // border-top: 1px solid #ededed;
-    // border-left: 1px solid #ededed;
-    // border-right: 1px solid #ededed;
+    border-radius: 6px 6px 0px 0px;
 }
-.returnbak {
-    margin-right: 20px;
+.returnbak{
+    margin-right:20px;
 }
-// .bi-chart{
-//     height: 600px;
-// }
-
-
- 
-// .bip-search{
-//     .el-dialog__header{
-//         background-color: #ffffff !important;
-//         // 20a0ff
-//     }
-// }
-.bip-form-item {
-  margin-bottom: 22px !important;
+.bip-form-item {
+    margin-bottom: 22px !important;
 }
 
 
@@ -496,6 +481,18 @@ $--bip-comm-color:#ffffff;//f4f6fb
             overflow-x: hidden !important;
             padding-right: 5px;
             height: 100%;
+        }
+    }
+}
+.changePass {
+    .el-dialog__header{
+        background-color: $--color-primary !important;
+        .el-icon-close{
+            color: #ffffff;
+        }
+        .el-dialog__title{
+            color: #ffffff;
+            font-size: 16px;
         }
     }
 }
