--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -444,8 +444,8 @@ $--bip-comm-color:#ffffff;//f4f6fb
 }
 .bip-main-container {
     position: fixed; 
-    height: calc(100% - 110px) !important;
-    // width: calc(100% - 70px) !important;
+    height: calc(100% - 140px) !important;
+    width: calc(100% - 30px) !important;
     z-index: 1;
     overflow: hidden;
     // margin-right: 20px;
