--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -513,3 +513,23 @@ $--bip-comm-color:#ffffff;//f4f6fb
         }
     }
 }
+ 
+.el-form-item__error {
+    /**position: absolute !important;
+    top:16px;
+    text-align: center;
+    background-color: red;
+    filter: alpha(Opacity=40);
+    opacity: 0.4;
+    width: auto;
+    height: 21px;
+    border-radius: 2px;
+    font-size: 12px;
+    color: #fff;
+    line-height: 21px;
+    z-index: 99;**/
+    top: 30px;
+    width: auto;
+    color: red;
+    z-index: 99;
+} 
