甘特图修改

--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -604,3 +604,6 @@ $--bip-comm-color:#ffffff;//f4f6fb
     color: red;
     z-index: 99;
 } 
+.gantt-task-list-item-select{
+    background-color:#81C2DC !important;
+}
