--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -1,4 +1,3 @@
-$--color-primary: #20a0ff;
 /* 改变 icon 字体路径变量，必需 */
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
@@ -50,12 +49,6 @@ body{
   }
   .user_hr{ 
       border-bottom: 1px solid #eeeeee;  
-  }
-  .header_badge_item{
-      top: -13px;
-      font-size: 22px;
-      color: white;
-      margin-right: 25px;
   }
   .menu{
       z-index: 99999; 
@@ -110,10 +103,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
 
 //菜单栏位按钮样式
 .menubar{
-    padding-bottom: 10px !important;
-    background: $--bip-bg-color;
-    // height: 60px;
-    // margin-bottom: 20px;
+    background: white;
+    height: 50px;
+    line-height: 50px;
 }
 .el-button-group > .el-button{
     background: $--bip-bg-color;
@@ -125,7 +117,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 }
 .bip-search{
     .el-dialog__header{
-        background-color: #20a0ff
+        @include head_bg_style();
     }
     .el-dialog__body{
         padding: 10px 0px !important;
@@ -137,7 +129,22 @@ $--bip-comm-color:#ffffff;//f4f6fb
     padding: 0 8px !important;
 }
 
-
+//BIP 按钮样式
+.bip_btn_primary{
+    @include bip_menu_bar_primary();
+}
+.bip_btn_success{
+    @include bip_menu_bar_success();
+}
+.bip_btn_info{
+    @include bip_menu_bar_info();
+}
+.bip_btn_warning{
+    @include bip_menu_bar_warning();
+}
+.bip_btn_danger{
+    @include bip_menu_bar_danger();
+}
 
 /**普通输入框*/
 .is-required .el-form-item__label{
@@ -187,7 +194,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 /**Query查询*/
 .bip-query {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
@@ -215,7 +222,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 // 统计方案样式
 .bip-search {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
@@ -246,7 +253,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 /**辅助弹出框*/
 .bipinsaid {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
@@ -278,7 +285,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 /**DLG弹出框*/
 .dlgbtn {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
@@ -318,7 +325,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 /**文件样式*/
 .bip-file {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
@@ -406,8 +413,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
         padding-left: 20px;
         }
     .el-dialog__header {
-        background-color: rgb(32, 160, 255);
-        // padding-top: 8px;
+        @include head_bg_style();
         .el-dialog__title{
             color: #ffffff;
             // font-weight:bold;
@@ -447,42 +453,46 @@ $--bip-comm-color:#ffffff;//f4f6fb
 .bip-main {
     // padding-left: 10px;
     padding: 0px !important;
-    margin-top: 2px !important;
+    margin-top: 10px !important;
   }
-.el-tabs__item {
-    padding: 0 20px;
-    height: 30px !important;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    line-height: 30px !important;
-    display: inline-block;
-    list-style: none;
-    font-size: 14px;
-    font-weight: 500;
-    color: #303133;
-    position: relative;
-}
-.bip-tabs .el-tabs__header{
-    padding: 0;
-    position: relative;
-    margin: 0 0 5px;
-    background: $--bip-comm-color;
+
+.bip-tabs{
+    .el-tabs__header{
+        margin-left: 14px;
+        padding: 0;
+        position: relative;
+        @include overall_bg_color();
+    }
 }
 .el-tabs--border-card > .el-tabs__content {
-    padding: 5px 15px;
+    padding: 10px 14px;
 }
 .el-tabs__content{
-    background:$--bip-bg-color
+    @include overall_bg_color();
 }
 .el-tabs--border-card {
-    background: $--bip-bg-color;
+    @include overall_bg_color();
+    border: none;
 }
-
+.el-tabs--border-card>.el-tabs__header {
+    border:none;
+}
 .el-tabs--border-card > .el-tabs__header .el-tabs__item.is-active {
-    background: $--bip-bg-color;
-    border-bottom-color: $--bip-bg-color;
+    @include tabs_pane_is_active();
+}
+.el-tabs--border-card > .el-tabs__header .el-tabs__item {
+    @include tabs_pane();
 }
 
+.bip-tabs-layout .el-tabs__nav-scroll{
+    background-color: white;
+    .el-tabs__item{
+        padding: 0px;
+    }
+}
+.bip-tabs-layout .el-tabs__header{
+    margin-left: 20px !important;
+}
 
 .el-tab-pane{
     background: $--bip-comm-color;
@@ -555,8 +565,8 @@ $--bip-comm-color:#ffffff;//f4f6fb
 
 .bip-main-container {
     position: fixed; 
-    height: calc(100% - 98px) !important;
-    width: calc(100% - 30px) !important;
+    height: calc(100% - 170px) !important;
+    width: calc(100% - 28px) !important;
     z-index: 1;
     overflow: hidden;
     // margin-right: 20px;
@@ -569,12 +579,19 @@ $--bip-comm-color:#ffffff;//f4f6fb
             overflow-x: hidden !important;
             padding-right: 5px;
             height: 100%;
+            width: 100%;
+        }
+        .el-scrollbar__wrap::-webkit-scrollbar {
+            width: 4px;
+        }
+        .el-scrollbar__wrap::-webkit-scrollbar-thumb {
+            background-color: #d9d9d9;
         }
     }
 }
 .changePass {
     .el-dialog__header{
-        background-color: $--color-primary !important;
+        @include head_bg_style();
         .el-icon-close{
             color: #ffffff;
         }
