--- a/src/assets/scss/_varibale.scss
+++ b/src/assets/scss/_varibale.scss
@@ -3,6 +3,12 @@
 $menu-background-color-theme:#FFFFFF;//左侧菜单背景色
 $menu-background-color-theme1:white;
 
+$menu-is-active-background-color-theme:#1890FF;//左侧菜单选中背景色
+$menu-is-active-background-color-theme1:#1890FF;
+
+$menu-is-active-text-color-theme:#ffffff;//左侧菜单选中文字颜色
+$menu-is-active-text-color-theme1:#1890FF;
+
 $head-background-color-theme:#181B2F;//头部背景色
 $head-background-color-theme1:white;
 
