--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -130,6 +130,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
 }
 
 //BIP 按钮样式
+.bip_btn_default{
+    @include bip_menu_bar_default();
+}
 .bip_btn_primary{
     @include bip_menu_bar_primary();
 }
@@ -461,7 +464,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
         margin-left: 14px;
         padding: 0;
         position: relative;
-        @include overall_bg_color();
+        // @include overall_bg_color();
     }
 }
 .el-tabs--border-card > .el-tabs__content {
