--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -104,7 +104,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 //菜单栏位按钮样式
 .menubar{
     background: white;
-    height: 50px;
+    min-height: 50px;
     line-height: 50px;
 }
 .el-button-group > .el-button{
