--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -559,6 +559,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 .bip-input-item-notitle{
     .el-form-item__label{
         width: 0px !important;
+        display: none;
     }
     .el-form-item__content{
         margin-left: 0px !important;
