--- a/src/assets/scss/_varibale.scss
+++ b/src/assets/scss/_varibale.scss
@@ -35,3 +35,8 @@ $bip-menu-bar-primary-background-color-theme1:#1890FF;
 
 $bip-menu-bar-primary-color-theme:#fff;//按钮栏主要按钮字体颜色
 $bip-menu-bar-primary-color-theme1:#1890FF;
+
+$bip-menu-bar-danger-background-color-theme:#f56c6c;
+$bip-menu-bar-danger-background-color-theme1:#f56c6c;
+$bip-menu-bar-danger-color-theme:#fff;
+$bip-menu-bar-danger-color-theme1:#fff;
