--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -597,6 +597,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
             background-color: #d9d9d9;
         }
     }
+    .el-scrollbar__thumb{
+        height: 0px !important
+    }
 }
 .changePass {
     .el-dialog__header{
