--- a/src/assets/scss/_mixin.scss
+++ b/src/assets/scss/_mixin.scss
@@ -32,6 +32,14 @@
     color:$menu-is-active-text-color-theme1;
   }
 }
+//左侧菜单选中样式
+@mixin menu_item_is_hover(){
+  background-color:$menu-is-hover-background-color-theme; 
+  [data-theme="theme1"] & {
+    background-color:$menu-is-hover-background-color-theme1;
+  }
+}
+
 // 头部样式
 @mixin head_all_style(){
   @include menu_head_style();
