--- a/src/assets/scss/_varibale.scss
+++ b/src/assets/scss/_varibale.scss
@@ -4,7 +4,11 @@ $menu-background-color-theme:#FFFFFF;//左侧菜单背景色
 $menu-background-color-theme1:#FFFFFF;
 
 $menu-is-active-background-color-theme:#1890FF;//左侧菜单选中背景色
-$menu-is-active-background-color-theme1:#1890FF;
+$menu-is-active-background-color-theme1:#36c670;
+
+$menu-is-hover-background-color-theme:#97c5f0;//左侧菜单选中背景色
+$menu-is-hover-background-color-theme1:#d7f4e3;
+
 
 $menu-is-active-text-color-theme:#ffffff;//左侧菜单选中文字颜色
 $menu-is-active-text-color-theme1:#ffffff;
