修改部分样式：页签添加图标，弹出框添加图标

--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -497,6 +497,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
     background-color: white;
     .el-tabs__item{
         padding: 0px;
+        position: relative;
     }
 }
 .bip-tabs-layout .el-tabs__header{
