--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -667,15 +667,18 @@ $--bip-comm-color:#ffffff;//f4f6fb
 .vxe-table--render-default.size--mini .vxe-header--column.col--ellipsis > .vxe-cell, .vxe-table--render-default.size--mini .vxe-body--column.col--ellipsis > .vxe-cell, .vxe-table--render-default.size--mini .vxe-footer--column.col--ellipsis > .vxe-cell {
     max-height: 62px !important;
 }
-
+.vxe-table--body-wrapper{
+    scrollbar-width:thin;
+    scrollbar-color: #ccc #eee;
+}
 .mytable-scrollbar{
     scrollbar-width:thin;
     scrollbar-color: #ccc #eee;
 }
 /*滚动条整体部分*/
 .mytable-scrollbar ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 7px;
+    height: 7px;
   }
   /*滚动条的轨道*/
   .mytable-scrollbar ::-webkit-scrollbar-track {
@@ -683,16 +686,16 @@ $--bip-comm-color:#ffffff;//f4f6fb
   }
   /*滚动条里面的小方块，能向上向下移动*/
   .mytable-scrollbar ::-webkit-scrollbar-thumb {
-    background-color: #bfbfbf;
+    background-color: #eee;
     border-radius: 5px;
-    border: 1px solid #F1F1F1;
+    border: 1px solid #ccc;
     box-shadow: inset 0 0 6px rgba(0,0,0,.3);
   }
   .mytable-scrollbar ::-webkit-scrollbar-thumb:hover {
-    background-color: #A8A8A8;
+    background-color: #eee;
   }
   .mytable-scrollbar ::-webkit-scrollbar-thumb:active {
-    background-color: #787878;
+    background-color: #eee;
   }
   /*边角，即两个滚动条的交汇处*/
   .mytable-scrollbar ::-webkit-scrollbar-corner {
