--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -674,6 +674,9 @@ $--bip-comm-color:#ffffff;//f4f6fb
     scrollbar-width:thin;
     scrollbar-color: #ccc #eee;
 }
+.vxe-table--footer-wrapper.body--wrapper {
+    scrollbar-width: thin;
+}
 .mytable-scrollbar{
     scrollbar-width:thin;
     scrollbar-color: #ccc #eee;
