--- a/src/scss/element-variables.scss
+++ b/src/scss/element-variables.scss
@@ -176,7 +176,7 @@ $--bip-comm-color:#ffffff;//f4f6fb
 
 .el-form-item__label{
     color:$--bip-input-color-label;
-    // font-weight:bold;  
+    text-align: left !important;
 }
 
 .el-input .el-input__inner {
